--- a/src/ArrayCs/project.json
+++ b/src/ArrayCs/project.json
@@ -10,7 +10,8 @@
     "frameworks": {
         "aspnetcore50": {
             "dependencies": {
-                "System.Console": "4.0.0-beta-22523"
+                "System.Console": "4.0.0-beta-22523",
+                "System.Collections": "4.0.10-beta-22605"
             }
         }
     }
