--- a/src/ArrayCs/project.json
+++ b/src/ArrayCs/project.json
@@ -11,7 +11,7 @@
         "aspnetcore50": {
             "dependencies": {
                 "System.Console": "4.0.0-beta-22523",
-                "System.Collections": "4.0.10-beta-22605"
+                "System.Runtime.Extensions": "4.0.10-beta-22605"
             }
         }
     }
