--- a/src/ArrayCs/project.json
+++ b/src/ArrayCs/project.json
@@ -11,7 +11,8 @@
         "aspnetcore50": {
             "dependencies": {
                 "System.Console": "4.0.0-beta-22523",
-                "System.Runtime.Extensions": "4.0.10-beta-22605"
+                "System.Runtime.Extensions": "4.0.10-beta-22605",
+                "Microsoft.AspNet.Diagnostics": "1.0.0-beta3"
             }
         }
     }
